apollo-router/src/plugins/authorization/snapshots/uhg_custom_appollo_roouter__plugins__authorization__policy__tests__array.snap
---
source: apollo-router/src/plugins/authorization/policy.rs
assertion_line: 988
expression: "TestResult\n{\n    query: QUERY, extracted_policies: &extracted_policies,\n    successful_policies: Vec::new(), result: doc, paths\n}"
---
query:

        query {
            topProducts {
                type
                publicReviews {
                    body
                    author {
                        name
                    }
                }
            }
        }
        
extracted_policies: {"read user", "read username", "review"}
successful policies: []
filtered:
{
  topProducts {
    type
  }
}

paths: ["/topProducts/publicReviews/@"]
