apollo-router/src/plugins/authorization/snapshots/uhg_custom_appollo_roouter__plugins__authorization__policy__tests__extract_policies.snap
---
source: apollo-router/src/plugins/authorization/policy.rs
assertion_line: 742
expression: doc
---
{
    "internal",
    "profile",
    "read user",
    "read username",
}
