apollo-router/src/plugins/authorization/snapshots/uhg_custom_appollo_roouter__plugins__authorization__policy__tests__interface_field-2.snap
---
source: apollo-router/src/plugins/authorization/policy.rs
assertion_line: 1377
expression: "TestResult\n{\n    query: QUERY2, extracted_policies: &extracted_policies,\n    successful_policies: Vec::new(), result: doc, paths\n}"
---
query:

        query {
            test
            itf {
                ... on A {
                    id
                    other
                }
                ... on B {
                    id
                    other
                }
            }
        }
        
extracted_policies: {"a", "b"}
successful policies: []
filtered:
{
  test
  itf {
    ... on A {
      other
    }
    ... on B {
      other
    }
  }
}

paths: ["/itf/... on A/id", "/itf/... on B/id"]
