apollo-router/src/plugins/authorization/snapshots/uhg_custom_appollo_roouter__plugins__authorization__policy__tests__interface_field.snap
---
source: apollo-router/src/plugins/authorization/policy.rs
assertion_line: 1351
expression: "TestResult\n{\n    query: QUERY, extracted_policies: &extracted_policies,\n    successful_policies: Vec::new(), result: doc, paths\n}"
---
query:

        query {
            test
            itf {
                id
                other
            }
        }
        
extracted_policies: {}
successful policies: []
filtered:
{
  test
  itf {
    other
  }
}

paths: ["/itf/id"]
