apollo-router/src/plugins/authorization/snapshots/uhg_custom_appollo_roouter__plugins__authorization__policy__tests__interface_inline_fragment.snap
---
source: apollo-router/src/plugins/authorization/policy.rs
assertion_line: 1015
expression: "TestResult\n{\n    query: QUERY, extracted_policies: &extracted_policies,\n    successful_policies: Vec::new(), result: doc, paths\n}"
---
query:

        query {
            topProducts {
                type
            }
            itf {
                id
                ... on User {
                    name
                }
            }
        }
        
extracted_policies: {"read user", "read username"}
successful policies: []
filtered:
{
  topProducts {
    type
  }
  itf {
    id
  }
}

paths: ["/itf/... on User"]
